fix: fix css z-index for an admin panel when in facets on mobile

--- a/ckanext/ap_main/theme/elements/admin-panel.scss
+++ b/ckanext/ap_main/theme/elements/admin-panel.scss
@@ -1,3 +1,9 @@
+body.filters-modal {
+    #admin-panel {
+        z-index: 0;
+    }
+}
+
 #admin-panel {
     $border: 1px solid var(--ap-border-color);
     $color: var(--ap-color);
